# dynamo-lite

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
bench/: build.gradle.kts
bench/src/main/java/io/dynlite/bench/: Placeholder.java  SingleNodeBench.java  ZipfianKeyGenerator.java
client/: build.gradle.kts
client/src/main/java/io/dynlite/client/: Cli.java
config/: cluster-3nodes.json
core/src/main/java/io/dynlite/core/: CausalOrder.java  ConflictResolver.java  DefaultVersionMerger.java  HashRing.java  VectorClock.java  VersionMerger.java  VersionedValue.java
core/src/test/java/io/dynlite/core/: HashRingSpec.java  VectorClockSpec.java
dynlite-experiments/: pyproject.toml
dynlite-experiments/src/: client.py  config.py  runner.py
dynlite-experiments/src/experiments/: anti_entropy.py  chaos.py  functional.py  perf_ycsb.py  sac.py  staleness.py
dynlite-experiments/src/plots/: all_plots.py  utils.py
gradle/wrapper/: gradle-wrapper.properties
scripts/: demo-smoke-test.sh  kill-node.sh  netem-add-latency.sh  netem-clear.sh  run-demo.sh
server/: build.gradle.kts
server/src/main/java/io/dynlite/cluster/: ClusterConfig.java  CoordinatorService.java  LocalNodeClient.java  NodeClient.java  RingRouting.java
server/src/main/java/io/dynlite/server/: KvService.java  Main.java  RequestLogger.java  ServerConfig.java  WebServer.java
server/src/main/proto/: kv_replica.proto
server/src/test/java/io/dynlite/cluster/: CoordinatorServiceMultiNodeSpec.java  CoordinatorServiceSingleNodeSpec.java
storage/src/main/java/io/dynlite/storage/: Wal.java  (+9 more)
(+66 files in other folders)
